--- a/Pages/Buses/Details.cshtml
+++ b/Pages/Buses/Details.cshtml
@@ -12,11 +12,18 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Bus.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Bus.Name)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Bus.ArrivalDates)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Bus.ArrivalDates)
         </dd>
+        
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Bus.DepartureDates)
         </dt>
