--- a/Pages/Buses/Index.cshtml
+++ b/Pages/Buses/Index.cshtml
@@ -9,6 +9,16 @@
 
 <p>
     <a asp-page="Create">Create New</a>
+    <form asp-page="./Index" method="get">
+        <div class="form-actions no-color">
+            <p>
+                Find by Bus Name:
+                <input type="text" name="SearchString" value="@Model.CurrentFilter" />
+                <input type="submit" value="Search" class="btn btn-primary" /> |
+                <a asp-page="./Index">Back to full List</a>
+            </p>
+        </div>
+    </form>
 </p>
 <table class="table">
     <thead>
@@ -19,6 +29,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Bus[0].Arrival.ArrivalName)
             </th>
+           
             <th>
                 @Html.DisplayNameFor(model => model.Bus[0].ArrivalDates)
             </th>
@@ -31,6 +42,13 @@
             <th>
                 @Html.DisplayNameFor(model => model.Bus[0].BusCategories)
             </th>
+             <th>
+                 
+                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort">
+
+                @Html.DisplayNameFor(model => model.Bus[0].Name)
+                </a>
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -42,12 +60,14 @@
                 selectedRow = "table-success";
             }
             <tr class="@selectedRow">
+               
             <td>
                 @Html.DisplayFor(modelItem => item.Departure.DepartureName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Arrival.ArrivalName)
             </td>
+            
             <td>
                 @Html.DisplayFor(modelItem => item.ArrivalDates)
             </td>
@@ -59,6 +79,9 @@
             </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.BusCategories)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
                 </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
