--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="~/css/MyCssTheme.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Proiect.styles.css" asp-append-version="true" />
+    <style>
+        .backimg{
+            background-image:url(img/b.jpg);
+        }
+    </style>
 </head>
-<body>
+<body class='backimg'>
+    
     <header>
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style="border-radius: 30%">
