--- a/Pages/Buses/Edit.cshtml
+++ b/Pages/Buses/Edit.cshtml
@@ -14,16 +14,14 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Bus.ID" />
-            <div class="form-group">
-                <label asp-for="Bus.DepartureID" class="control-label">The Place Of Departure</label>
-                <select asp-for="Bus.DepartureID" class="form-control" asp-items="ViewBag.DepartureID">
-                </select>
+             <div class="form-group">
+                <label asp-for="Bus.DepartureID" class="control-label"></label>
+                 <select asp-for="Bus.DepartureID" class="form-control" asp-items="ViewBag.DepartureID"></select>
                 <span asp-validation-for="Bus.DepartureID" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Bus.ArrivalID" class="control-label">The Place Of Arrival</label>
-                <select asp-for="Bus.ArrivalID" class="form-control" asp-items="ViewBag.ArrivalID">
-                </select>
+             <div class="form-group">
+                <label asp-for="Bus.ArrivalID" class="control-label"></label>
+                <select asp-for="Bus.ArrivalID" class="form-control" asp-items="ViewBag.ArrivalID"></select>
                 <span asp-validation-for="Bus.ArrivalID" class="text-danger"></span>
             </div>
              <div class="form-group">
